# PFG_Cliente

./: .directory  .gitmodules  README.md  _directory  build.gradle  gradle.properties  local.properties  local.properties.txt  settings.gradle
app/: .directory  CMakeLists.txt  _directory  build.gradle  proguard-rules.pro
app/libs/armeabi/: stockfish
app/libs/armeabi-v7a/: stockfish  stockfish-nopie
app/libs/mips64/: stockfish
app/libs/x86/: stockfish  stockfish-nopie
app/libs/x86_64/: stockfish-nopie
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore  stockfish-arm64-v8a  stockfish-armeabi-nopie
app/src/main/cpp/: Android.mk
app/src/main/cpp/gtb/compression/: wrap.c
app/src/main/cpp/testProject/: main.cpp
app/src/main/java/chess/: Book.java  Game.java
app/src/main/java/com/google/zxing/client/android/: BeepManager.java  CaptureActivity.java  CaptureActivityHandler.java  DecodeHandler.java  HelpActivity.java  PreferencesActivity.java  ViewfinderView.java
app/src/main/java/com/google/zxing/client/android/book/: SearchBookContentsActivity.java  SearchBookContentsAdapter.java  SearchBookContentsListItem.java
app/src/main/java/com/google/zxing/client/android/camera/open/: OpenCameraInterface.java
app/src/main/java/com/google/zxing/client/android/encode/: EncodeActivity.java  QRCodeEncoder.java
app/src/main/java/com/google/zxing/client/android/history/: HistoryActivity.java  HistoryItemAdapter.java
app/src/main/java/com/google/zxing/client/android/result/: AddressBookResultHandler.java  CalendarResultHandler.java  EmailAddressResultHandler.java  GeoResultHandler.java  ISBNResultHandler.java  ProductResultHandler.java  ResultHandler.java  SMSResultHandler.java  TelResultHandler.java  TextResultHandler.java  URIResultHandler.java  WifiResultHandler.java
app/src/main/java/com/google/zxing/client/android/result/supplement/: BookResultInfoRetriever.java  ProductResultInfoRetriever.java  URIResultInfoRetriever.java
app/src/main/java/com/google/zxing/client/android/share/: AppPickerActivity.java  BookmarkAdapter.java  BookmarkPickerActivity.java  LoadPackagesAsyncTask.java  ShareActivity.java
app/src/main/java/com/larvalabs/svgandroid/: SVGParser.java
app/src/main/java/net/margaritov/preference/colorpicker/: ColorPickerDialog.java  ColorPickerView.java
app/src/main/java/org/petero/droidfish/: BaseScannerActivity.java  ButtonActions.java  CameraSelectorDialogFragment.java  ChessBoardPlay.java  ColorTheme.java  DroidFish.java  FormatSelectorDialogFragment.java  FullScannerActivity.java  SeekBarPreference.java
app/src/main/java/org/petero/droidfish/activities/: CPUWarning.java  EditBoard.java  EditOptions.java  EditPGN.java  LoadFEN.java  LoadScid.java  PGNFile.java  Preferences.java
app/src/main/java/org/petero/droidfish/book/: InternalBook.java
app/src/main/java/org/petero/droidfish/engine/: DroidComputerPlayer.java  EngineUtil.java  ExternalEngine.java  NetworkEngine.java
app/src/main/java/org/petero/droidfish/gamelogic/: DroidChessController.java  GameTree.java  PgnToken.java  TextIO.java
app/src/main/java/org/petero/droidfish/qr/: AsyncBinQRGenerator.java  AsyncPGNParser.java  AsyncQRGenerator.java  MessageDialogFragment.java  QRAlphanumParser.java  QRParserBeta.java  QRResultActivity.java  QRUtils.java  ZXingScannerView.java
app/src/main/res/layout/: activity_main.xml  activity_qrresult.xml  app_picker_list_item.xml  capture.xml  create_qr_file.xml  encode.xml  main.xml  search_book_contents_header.xml  share.xml
app/src/main/res/layout-land/: main.xml
app/src/main/res/menu/: result_qr_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: filepaths.xml
cuckoochessapk/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
